// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders default 1`] = `
<DocumentFragment>
  <div
    class="react-tabs css-14ccmid"
    data-cy="tabs"
    data-rttabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="panel:r0:0"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-rttab="true"
        id="tab:r0:0"
        role="tab"
        tabindex="0"
      >
        Tab 1 Name
      </li>
      <li
        aria-controls="panel:r0:1"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-rttab="true"
        id="tab:r0:1"
        role="tab"
      >
        Tab 2 Name
      </li>
    </ul>
    <div
      aria-labelledby="tab:r0:0"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="panel:r0:0"
      role="tabpanel"
    >
      <div>
        First tab Content
      </div>
    </div>
    <div
      aria-labelledby="tab:r0:1"
      class="react-tabs__tab-panel"
      id="panel:r0:1"
      role="tabpanel"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs renders vertically 1`] = `
<DocumentFragment>
  <div
    class="react-tabs css-628men"
    data-cy="tabs"
    data-rttabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="panel:r1:0"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-rttab="true"
        id="tab:r1:0"
        role="tab"
        tabindex="0"
      >
        Tab 1 Name
      </li>
      <li
        aria-controls="panel:r1:1"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-rttab="true"
        id="tab:r1:1"
        role="tab"
      >
        Tab 2 Name
      </li>
    </ul>
    <div
      aria-labelledby="tab:r1:0"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="panel:r1:0"
      role="tabpanel"
    >
      <div>
        First tab Content
      </div>
    </div>
    <div
      aria-labelledby="tab:r1:1"
      class="react-tabs__tab-panel"
      id="panel:r1:1"
      role="tabpanel"
    />
  </div>
</DocumentFragment>
`;
